@@ -1,3 +1,8 @@
+2005-07-05  Stuart Caie   <kyzer@4u.net>
+
+	* src/cabinfo.c: This can now search and print accurate output for
+	cabinets (and files containing cabinets) over 2GB.
+
 2005-04-21  Stuart Caie   <kyzer@4u.net>
 
 	* src/cabinfo.c: This now prints if the NAME_IS_UTF flag is set for
